--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ body {
     border-radius: 8px;
 }
 
+table {
+  border-collapse: collapse;
+  max-width: 100%;
+  width: 100%;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+td {
+  padding: 5px;
+}
+
 /* Media query for tablets and smaller screens */
 @media (max-width: 768px) {
     body {
