--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ table {
 
 table {
   border: 1px solid silver;
-  width: 80%;
+  width: 90%;
   margin: auto;
   border-collapse: collapse;
 }
@@ -32,11 +32,17 @@ td {
   body {
     margin: 0 5%; /* Reduce margin to 5% for screens 768px or smaller */
   }
+  td {
+    padding: 2px;
+  }
 }
 
 /* Media query for smartphones and very small screens */
 @media (max-width: 480px) {
   body {
     margin: 0 2%; /* Further reduce margin to 2% for screens 480px or smaller */
+  }
+  td {
+    padding: 1px;
   }
 }
