--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ table {
 
 table {
   border: 1px solid silver;
-  width: 90%;
+  /* width: 90%; */
   margin: auto;
   border-collapse: collapse;
 }
