--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 table {
-  border: 1px solid silver;
+  border: 1px solid coral;
   margin: auto;
   border-collapse: collapse;
   max-width: 100%;
