--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     border-radius: 8px;
     max-width: 100%;
     text-overflow: ellipsis; /* Add an ellipsis (...) to indicate that text is truncated */
+    word-wrap: break-word;     /* Allow breaking words to prevent overflow */
+    word-break: break-all;     /* Break words at any point to prevent overflow */
+    white-space: normal;       /* Allow text to wrap to the next line */
+    overflow: hidden;          /* Hide any overflow */
 }
 
 .typing-animation {
@@ -20,8 +24,6 @@ body {
 #typing {
     border-right: 0px solid;
     overflow: hidden;
-    max-width: 100%;
-    text-overflow: ellipsis; /* Add an ellipsis (...) to indicate that text is truncated */
 }
 
 @keyframes blink {
@@ -51,13 +53,6 @@ a {
 
 /* Media query for tablets and smaller screens */
 @media (max-width: 768px) {
-  #typing {
-        border-right: 0px solid;
-        overflow: hidden;
-        max-width: 768px;
-        text-overflow: ellipsis; /* Add an ellipsis (...) to indicate that text is truncated */
-  }
-  
   body {
     margin: 0 5%; /* Reduce margin to 5% for screens 768px or smaller */
   }
@@ -65,12 +60,6 @@ a {
 
 /* Media query for smartphones and very small screens */
 @media (max-width: 480px) {
-  #typing {
-        border-right: 0px solid;
-        overflow: hidden;
-        max-width: 480px;
-        text-overflow: ellipsis; /* Add an ellipsis (...) to indicate that text is truncated */
-  }
   body {
     margin: 0 2%; /* Further reduce margin to 2% for screens 480px or smaller */
   }
