--- a/style-ambient-synth.css
+++ b/style-ambient-synth.css
@@ -11,7 +11,7 @@
 
 .controls {
     display: flex;
-    align-items: center;
+    align-items: left;
     gap: 10px;
     width: 10%;
     flex-wrap: nowrap;
